--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "dev": "vite --mode development",
+    "build": "vue-tsc && vite build production",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.3.8",
+    "nprogress": "^0.2.0",
     "sass": "^1.64.0",
     "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
