--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nprogress": "^0.2.0",
     "sass": "^1.64.0",
     "sass-loader": "^13.3.2",
+    "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vuex": "^4.1.0",
