--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 # .env.development
 
 VITE_BASE_URL = 'http://localhost:5173/api'
+VITE_BASE_WS = 'ws://localhost:9090'
 VITE_PORT = 5173
 VITE_HOST = 'localhost'
