--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,5 @@
 # .env.production
+VITE_BASE_URL = 'http://localhost:5173/api'
+VITE_BASE_WS = 'ws://localhost:9090'
+VITE_PORT = 5173
+VITE_HOST = 'localhost'
