--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 # .env.production
-VITE_BASE_URL = 'http://localhost:5173/api'
+
+VITE_BASE_URL = 'https://123.60.178.131/api'
 VITE_BASE_WS = 'ws://localhost:9090'
 VITE_PORT = 5173
 VITE_HOST = 'localhost'
