--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vuex-along": "^1.2.13"
   },
   "devDependencies": {
+    "@types/node": "^20.5.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
