--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass-loader": "^13.3.2",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4",
+    "vue-cropper": "^0.6.2",
     "vue-router": "^4.2.4",
     "vuex": "^4.1.0",
     "vuex-along": "^1.2.13"
