个人资料、缓存调整

--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,6 @@
 
 VITE_BASE_URL = 'http://localhost:5173/api'
 VITE_BASE_WS = 'ws://localhost:9090'
+VITE_FILE = 'http://localhost:9090'
 VITE_PORT = 5173
 VITE_HOST = 'localhost'
