--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 # .env.production
 
 VITE_BASE_URL = 'https://woaixuexi.co/api'
-VITE_BASE_WS = 'ws://localhost:9090'
+VITE_BASE_WS = 'wss://woaixuexi.co/ws'
 VITE_FILE = 'https://woaixuexi.co/api'
 VITE_PORT = 5173
 VITE_HOST = 'localhost'
