--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,5 @@ VITE_BASE_WS = 'ws://localhost:9090'
 VITE_FILE = 'http://localhost:9090'
 VITE_PORT = 5173
 VITE_HOST = 'localhost'
+VITE_TENCENT_IP_PREFIX = '/tencent'
+VITE_BAIDU_IP_PREFIX = '/baidu'
