--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,5 @@ VITE_BASE_WS = 'wss://woaixuexi.co/ws'
 VITE_FILE = 'https://woaixuexi.co/api'
 VITE_PORT = 5173
 VITE_HOST = 'localhost'
+VITE_TENCENT_IP_PREFIX = 'https://apis.map.qq.com'
+VITE_BAIDU_IP_PREFIX = 'https://api.map.baidu.com'
