--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,10 @@
 # .env.development
 
-VITE_BASE_URL = 'http://localhost:5173/api'
+# VITE_BASE_URL = 'http://localhost:9090'
+VITE_BASE_URL = 'http://192.168.5.58:9090'
+# VITE_BASE_URL = 'http://123.60.178.131:9090'
+VITE_API_PREFIX = '/api'
 VITE_BASE_WS = 'ws://localhost:9090'
 VITE_FILE = 'http://localhost:9090'
 VITE_PORT = 5173
 VITE_HOST = 'localhost'
-VITE_TENCENT_IP_PREFIX = '/tencent'
-VITE_BAIDU_IP_PREFIX = '/baidu'
